# math-agent-framework

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt
benchmarks/: README.md  REPORT.md  benchmark_20260604_135801.json  benchmark_direct.py  compare.py  compare_math.py  comparison_summary.py  diagnose_regression.py  discover_models.py  download_math.py  engine_correctness.py  final_chart.py  final_report.py  full_benchmark.py  gen_cn_report.py  harness_benchmark.py  harness_llm_test.py  plot_difficulty.py  problems.json  reproduce_failures.py  run_mr.py  runner.py  test_fix.py
benchmarks/data/: algebra_problems.json  amc8_problems.json
benchmarks/reports/: maf_vs_raw_20260603_174121.json  math_benchmark_20260603_202904.json  mr_report_20260603_153000.json  mr_report_20260603_154747.json
benchmarks/results/: algebra_results.json  amc8_results.json  comparison_summary.json  correct_harness_analysis.json  detailed_report_cn.md  direct_algebra.json  direct_amc8.json  engine_correctness.json  final_report.json  final_report.md  (+1 more)
cli/: __init__.py  cli.py
core/: __init__.py  agent_loop.py  analysis_engine.py  document_engine.py  formal_proof_engine.py  friendly_errors.py  llm_client.py  multi_agent_verify_engine.py  numerical_engine.py  pde_engine.py  pipeline_engine.py  quantecon_engine.py  sagemath_engine.py  symbolic_engine.py  verification_engine.py  visualization_engine.py
demo/: README.md  demo_livephoto.mov  demo_output.json  generate_advanced_demos.py  generate_demo.py
harness/: __init__.py  orchestrator.py  skill_registry.py  tool_routing.py
mcp/: __init__.py  mcp_server.py  tool_registry.py
models/: __init__.py  base_model.py
tests/: test_analysis.py  test_harness.py  test_models.py  test_pde.py  test_pde_mini.py  test_pde_quick.py  test_symbolic_engine.py
(+13 files in other folders)
